<resources>
    <string name="app_name">Navigation Drawer 2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Shell Core</string>
    <string name="user_email">shell.one.core@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Favorito</string>
    <string name="sent_mail">Enviar email</string>
    <string name="drafts">Drafts</string>
    <string name="all_mails">Todos los correos</string>
    <string name="trash">Papelera</string>
    <string name="spam">Spams</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">Abrir drawer</string>
    <string name="closeDrawer">Cerrar Drawer</string>
</resources>
