<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/ic_star"
            android:title="@string/starred" />
        <item
            android:id="@+id/sent_email"
            android:checked="false"
            android:icon="@drawable/ic_send"
            android:title="@string/sent_mail" />
        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/ic_drafts"
            android:title="@string/drafts" />
        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/ic_all_mails"
            android:title="@string/all_mails" />
        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/ic_trash"
            android:title="@string/trash" />
        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/ic_spams"
            android:title="@string/spam" />
    </group>
</menu>